Fix some coding standard violations